# yakapi

./: .gitignore  Dockerfile  LICENSE  README.md  cobra_commands_test.go  docker-compose.yaml  docker-compose.yml  go.mod  go.sum  homev1_test.go  main.go
.github/workflows/: ci.yml  deploy.yml
api/: go.mod  main.go
ci/: go.mod  main.go
client/: client.go  client_test.go
cmd/ws/: main.go
etc/default/: yakapi.env
etc/systemd/: yakapi.service
examples/: Dockerfile  README.md  ci.py  dump.py  pyproject.toml  requirements.txt  test_subscribe.py  uptime.py  yakapi.py
internal/ci/: ci.go
internal/cmd/pub/: pub.go
internal/cmd/server/: handlers.go  homev1_test.go  revision.go  server.go  sfc.go
internal/cmd/sub/: sub.go
internal/gds/: client_test.go  note.go
internal/sfc/: set.go  set_test.go  sfc.go
internal/stream/: stream.go
internal/telemetry/: telemetry.go
motor/: motor.py
oakd/: capture.py  hello.py  run.py  test.py
script/: ci  deploy  server  yakapi
yakapi/: Dockerfile  README.md  docker-compose.yaml  go.mod  go.sum  main.go
yakapi/cmd/streams/: main.go
yakapi/etc/default/: yakapi.env
yakapi/examples/: ci.py  uptime.py
yakapi/internal/ci/: ci.go
yakapi/internal/gds/: client.go  note.go
yakapi/internal/mw/: mw.go
yakapi/internal/stream/: stream.go
yakapi/script/: ci  deploy  server
yakapi_package/: README.md  setup.py
yakapi_package/yakapi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
yakllm/: README.md  env.go  eyes.go  eyes.txt  eyes_welcome.txt  go.mod  go.sum  main.go  system.txt
yakllm/cmd/eval/: eyes.txt  (+1 more)
(+3 files in other folders)
