[project]
name = "examples"
version = "0.1.0"
description = "yakapi example code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yakapi"
]

line-length = 88
indent-width = 4

[tool.uv.sources]
yakapi = { path = "../yakapi_package" }

[format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
